Add more context to earlier designs

--- a/app/views/history/course-with-parts/index.html
+++ b/app/views/history/course-with-parts/index.html
@@ -12,6 +12,13 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>Experimental designs looking at breaking course fields onto different pages, based on a theme.</p>
+      <p>Try listing courses like search.</p>
+    </div>
+  </div>
+
   {% set contents = [
   { text: 'Courses', id: 'courses' },
   { text: 'Course', id: 'course' },
