--- a/app/views/history/new-course-wizard/index.html
+++ b/app/views/history/new-course-wizard/index.html
@@ -12,6 +12,12 @@
   </div>
   <h1 class="heading-xlarge">{{ title }}</h1>
 
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <p>First attempts at a ‘one thing per page’ approach to creating a course.</p>
+    </div>
+  </div>
+
   {% set contents = [
   { text: 'Title', id: 'title' },
   { text: 'Qualifications', id: 'qualifications' },
