--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -197,10 +197,10 @@
       <p>Work to define our definition of a course.</p>
 
       <h3 class="heading-small">
-        <a href="/history/course-with-variants">Course with fields to explain a user’s choice</a>
+        <a href="/history/course-with-variants">Course with variants and field guidance</a>
       </h3>
       <p>
-        Exploration of a course page with fields to capture variants of a course and the differences between them. It’s unclear how courses vary between qualification, funding, subject and accrediting provider – use fields on a course page to allow providers to help candidates make an informed choice.
+        Based on UCAS course descriptions it’s often unclear how courses vary between qualification, funding, subject and accrediting provider – use fields on a course page to prompt providers to indicate these differences, helping candidates make an informed choice.
       </p>
 
       <h3 class="heading-small">
