--- a/app/views/history/original-onboarding/index.html
+++ b/app/views/history/original-onboarding/index.html
@@ -15,6 +15,8 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>The spreadsheet sent to providers rendered as a single page form. See the <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/319258638/Spreadsheet+for+private+beta">original spreadsheet on confluence</a>.</p>
+
+      <p>Guidance included alongside each field matches the spreadsheet guidance. Note that extra guidances was needed regarding word counts and validation in the spreadsheet.</p>
     </div>
   </div>
 
