--- a/app/views/course.html
+++ b/app/views/course.html
@@ -78,8 +78,8 @@
     <dd>{{ course.route }}</dd>
     <dt>Subjects:</dt>
     <dd>{{ course.subjects }}</dd>
-    <dt>Age range:</dt>
-    <dd>{{ course.ageRange }}</dd>
+    <!-- <dt>Age range:</dt>
+    <dd>{{ course.ageRange }}</dd> -->
     <dt>Qualification:</dt>
     <dd>{{ course.qualifications }}</dd>
     <dt>Regions:</dt>
