--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -38,11 +38,16 @@
     {% if state == 'draft' %}
       <p>You have unpublished changes.</p>
     {% endif %}
+    <hr />
+
+    <h3 class="heading-medium remove-top-margin">Preview</h3>
+    <p>Preview your information to check for mistakes before publishing.</p>
+    <a href="/preview/about-your-organisation">Preview</a>
 
     <hr />
 
     <h3 class="heading-medium remove-top-margin">Publish</h3>
-    <p>Publishing will update all {{ value('training-provider-name') }} courses.</p>
+    <p>New information will show on all {{ value('training-provider-name') }} courses.</p>
     <p>
       <a href="#" class="button">Publish</a>
     </p>
