Add formatting guidance to course sub-pages

--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -33,6 +33,9 @@
 
         {{ macros.radioGroup(course.programmeCode + '-duration', fields, errors) }}
       </div>
+      <div class="column-one-third">
+        {{ macros.formatting() }}
+      </div>
     </div>
 
     <div class="grid-row">
