--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -33,6 +33,9 @@
 
         {{ macros.textarea(course.programmeCode + '-about-this-course', 'About this course', 20, '', 400, errors) }}
       </div>
+      <div class="column-one-third">
+        {{ macros.formatting() }}
+      </div>
     </div>
 
     <hr />
