--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -17,7 +17,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form action="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" method="post">
-        <h2 class="heading-large">Qualifications needed</h2>
+        <h2 class="heading-large remove-top-margin">Qualifications needed</h2>
         <p>State the minimum academic qualifications needed for this course, in addition to the basic national requirements.</p>
 
         {{ macros.textarea(course.programmeCode + '-qualifications-required', 'Qualifications needed', 8, null, 100, errors) }}
@@ -36,6 +36,9 @@
 
         <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">Cancel changes</a>
       </form>
+    </div>
+    <div class="column-one-third">
+      {{ macros.formatting() }}
     </div>
   </div>
 </main>
