--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -6,6 +6,8 @@ $path: "/public/images/";
 // Take a look in /govuk-modules/_govuk-elements.scss to see which files are imported.
 @import 'govuk-elements';
 
+@import 'simplemde-theme';
+
 // Take a look at in app/assets/sass/patterns/ to see which files are imported.
 @import 'patterns/check-your-answers';
 @import 'patterns/task-list';
