--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -333,7 +333,9 @@
 
 {% macro previewPart(id, org = false) %}
   {% if (value(id)) %}
-    <pre class="preview-pre">{{ value(id) }}</pre>
+    <div class="markdown">
+      {{ markdown(id) | safe }}
+    </div>
   {% else %}
     <p class="missing-section">
       {% if org %}
