Add basic SimpleMDE documentation

--- a/app/views/history/formatting/index.html
+++ b/app/views/history/formatting/index.html
@@ -3,13 +3,12 @@
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
-<main id="content" role="main">
-  <div class="breadcrumbs">
+<main id="content" role="main design-history">
+  <div class="breadcrumbs dont-print">
     <ol>
       <li><a href="/history">Design history</a></li>
     </ol>
   </div>
-
   <h1 class="heading-xlarge">{{ title }}</h1>
 
   <div class="grid-row">
@@ -30,6 +29,12 @@
 
       <p>The problem with these sorts of links is that they aren’t accessible. They don’t have any useful labels to indicate what the link is for. The URL is often long and hard to read.</p>
 
+      <h2 class="heading-large">HTML</h2>
+
+      <p>We could allow users to use raw HTML: &#x3C;a href=&#x22;/blah&#x22;&#x3E;Link&#x3C;/a&#x3E;. This is prone to more user error than markdown.</p>
+
+      <p>It is the undocumented approach used by users on the existing UCAS system.</p>
+
       <h2 class="heading-large">Markdown</h2>
 
       <p>We could use markdown. An off-the-shelf library could render our markdown. <a href="https://github.com/DFE-Digital/search-and-compare-ui/blob/6c14c801c0b89e3f96effe9f25d5f66a5832e5fe/src/Utils/MarkdownFormatter.cs">A parser exists in search-and-compare-ui</a>.</p>
@@ -44,13 +49,32 @@
 
       <p>We need to test the link syntax with users to see how easy it is to use. We might need to provide tools to make it more easy to add links in the future.</p>
 
-      <h2 class="heading-large">HTML</h2>
+      <h3 class="heading-medium">Simple MDE</h3>
 
-      <p>We could allow users to use raw HTML: &#x3C;a href=&#x22;/blah&#x22;&#x3E;Link&#x3C;/a&#x3E;. This is prone to more user error than markdown.</p>
+      <p>Simple MDE (markdown editor) is a frontend library that enhances textareas to make writing markdown easier. It includes syntax highlighting and buttons for inserting different features. <a href="https://github.com/sparksuite/simplemde-markdown-editor">Simple MDE on Github</a>.</p>
 
-      <p>It is the undocumented approach used by users on the existing UCAS system.</p>
+      <p>We can restrict features down to paragraphs, lists and links only. The library also provides an inline preview of how the markdown will render.</p>
+
+      <p>We’ll test how this library performs out of the box in user research.</p>
 
     </div>
   </div>
+
+  {% set contents = [
+    { text: 'Animation showing editor features', id: 'animation' },
+    { text: 'Course with Simple MDE editor', id: 'course' },
+    { text: 'Preview of markdown', id: 'preview' },
+    { text: 'About your organisation with Simple MDE editor', id: 'about-your-organisation' }
+  ] %}
+  {{ macros.screenshotContents(contents) }}
+
+  {{ macros.screenshot('Animation showing editor features', 'animation', '/public/images/history/formatting/markdown-editor.gif', '/public/images/history/formatting/markdown-editor.gif', '') }}
+
+  {{ macros.screenshot('Course with Simple MDE editor', 'course', '/public/images/history/formatting/thumbnails/02-course.png', '/public/images/history/formatting/02-course.png', '') }}
+
+  {{ macros.screenshot('Preview of markdown', 'preview', '/public/images/history/formatting/thumbnails/03-preview.png', '/public/images/history/formatting/03-preview.png', '') }}
+
+  {{ macros.screenshot('About your organisation with Simple MDE editor', 'about-your-organisation', '/public/images/history/formatting/thumbnails/01-about-your-organisation.png', '/public/images/history/formatting/01-about-your-organisation.png', '') }}
+
 </main>
 {% endblock %}
