Link to formatting documentation

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/formatting">Formatting</a>
+      </h3>
+      <p>
+        Paragraphs, lists and links.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/no-more-folding">No more course folding</a>
       </h3>
       <p>
