--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -302,3 +302,27 @@ dl.aligned.course-part-tasks dd {
 .preview-pre {
   white-space: pre-wrap;
 }
+
+.textarea-wrapper {
+  position: relative;
+
+  .custom-toolbar {
+    text-align: right;
+    width: 320px;
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    z-index: 2;
+
+    label {
+      @include core-16;
+      display: inline;
+      margin-right: 5px;
+    }
+
+    select {
+      @include core-16;
+      width: 220px;
+    }
+  }
+}
