Preserve original publish workflow designs

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -48,11 +48,11 @@
     {% endif %}
     <hr />
 
-    <h3 class="heading-medium remove-top-margin">Preview</h3>
+    {# <h3 class="heading-medium remove-top-margin">Preview</h3>
     <p>Preview your information to check for mistakes before publishing.</p>
     <a href="/preview/about-your-organisation">Preview</a>
 
-    <hr />
+    <hr /> #}
 
     <h3 class="heading-medium remove-top-margin">Publish</h3>
     <p>New information will show on all {{ value('training-provider-name') }} courses.</p>
