--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -75,6 +75,130 @@
         New
       </h2>
       <p>Fields are empty</p>
+
+<div class="add-double-bottom-margin status-box">
+
+
+
+
+
+      <p>You need to complete and publish this information.</p>
+
+
+
+    <hr>
+
+
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
+    <p>New information will show on all Bracknell Forest Partnership courses.</p>
+    <p>
+      <a href="#" class="button">Publish</a>
+    </p>
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">Formatting</h3>
+  <p>You can use paragraphs, lists and links in your content.</p>
+  <a href="#">Formatting help</a>
+</div>
+
+    </div>
+
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">First draft</h2>
+      <p>Edits have been made</p>
+
+<div class="add-double-bottom-margin status-box">
+
+
+
+
+
+
+
+      <p>You have unpublished changes.</p>
+
+    <hr>
+
+
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
+    <p>New information will show on all Bracknell Forest Partnership courses.</p>
+    <p>
+      <a href="#" class="button">Publish</a>
+    </p>
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">Formatting</h3>
+  <p>You can use paragraphs, lists and links in your content.</p>
+  <a href="#">Formatting help</a>
+</div>
+
+    </div>
+
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">Published</h2>
+      <p>No subsequent edits made</p>
+
+<div class="add-double-bottom-margin status-box">
+
+    <p>Last published on 15 August 2018</p>
+
+
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">Formatting</h3>
+  <p>You can use paragraphs, lists and links in your content.</p>
+  <a href="#">Formatting help</a>
+</div>
+
+    </div>
+
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">Second draft</h2>
+      <p>Edits made after publishing</p>
+
+<div class="add-double-bottom-margin status-box">
+
+    <p>Last published on 15 August 2018</p>
+
+
+
+
+
+
+
+      <p>You have unpublished changes.</p>
+
+    <hr>
+
+
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
+    <p>New information will show on all Bracknell Forest Partnership courses.</p>
+    <p>
+      <a href="#" class="button">Publish</a>
+    </p>
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">Formatting</h3>
+  <p>You can use paragraphs, lists and links in your content.</p>
+  <a href="#">Formatting help</a>
+</div>
+
+    </div>
+  </div>
+
+  <!-- <div class="grid-row" style="margin-left: -165px; margin-right: -165px">
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">
+        New
+      </h2>
+      <p>Fields are empty</p>
       {{ macros.aboutYourOrgPublish('new') }}
     </div>
 
@@ -95,7 +219,7 @@
       <p>Edits made after publishing</p>
       {{ macros.aboutYourOrgPublish('draft', true) }}
     </div>
-  </div>
+  </div> -->
 
   <h2 class="heading-large" id="course-heading">Course</h2>
   <div class="grid-row">
@@ -121,6 +245,126 @@
         New
       </h2>
       <p>Fields are empty</p>
+
+<div class="add-double-bottom-margin status-box">
+
+
+
+
+
+    <h3 class="heading-medium remove-top-margin">Preview</h3>
+    <p>See how this course looks with your changes.</p>
+    <p>Preview your course to check for mistakes before publishing.</p>
+    <a href="#">Preview course</a>
+    <hr>
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
+    <p>Publish your changes for applicants to see them.</p>
+    <a href="#" class="button">Publish</a>
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">View on website</h3>
+  <p>See how this course currently looks to applicants:</p>
+  <a href="#">View on website</a>
+</div>
+
+    </div>
+
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">First draft</h2>
+      <p>Edits have been made</p>
+
+<div class="add-double-bottom-margin status-box">
+
+
+
+    <p>You have unpublished changes.</p>
+    <hr>
+
+
+
+    <h3 class="heading-medium remove-top-margin">Preview</h3>
+    <p>See how this course looks with your changes.</p>
+    <p>Preview your course to check for mistakes before publishing.</p>
+    <a href="#">Preview course</a>
+    <hr>
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
+    <p>Publish your changes for applicants to see them.</p>
+    <a href="#" class="button">Publish</a>
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">View on website</h3>
+  <p>See how this course currently looks to applicants:</p>
+  <a href="#">View on website</a>
+</div>
+
+    </div>
+
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">Published</h2>
+      <p>No subsequent edits made</p>
+
+<div class="add-double-bottom-margin status-box">
+
+    <p>Last published on 15 August 2018</p>
+
+
+
+
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">View on website</h3>
+  <p>See how this course currently looks to applicants:</p>
+  <a href="#">View on website</a>
+</div>
+
+    </div>
+
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">Second draft</h2>
+      <p>Edits made after publishing</p>
+
+<div class="add-double-bottom-margin status-box">
+
+    <p>Last published on 15 August 2018</p>
+
+
+
+    <p>You have unpublished changes.</p>
+    <hr>
+
+
+
+    <h3 class="heading-medium remove-top-margin">Preview</h3>
+    <p>See how this course looks with your changes.</p>
+    <p>Preview your course to check for mistakes before publishing.</p>
+    <a href="#">Preview course</a>
+    <hr>
+
+    <h3 class="heading-medium remove-top-margin">Publish</h3>
+    <p>Publish your changes for applicants to see them.</p>
+    <a href="#" class="button">Publish</a>
+
+
+  <hr>
+  <h3 class="heading-medium remove-top-margin">View on website</h3>
+  <p>See how this course currently looks to applicants:</p>
+  <a href="#">View on website</a>
+</div>
+
+    </div>
+  </div>
+
+  <!-- <div class="grid-row" style="margin-left: -165px; margin-right: -165px">
+    <div class="column-one-quarter">
+      <h2 class="heading-medium">
+        New
+      </h2>
+      <p>Fields are empty</p>
       {{ macros.coursePublish('new') }}
     </div>
 
@@ -141,7 +385,7 @@
       <p>Edits made after publishing</p>
       {{ macros.coursePublish('draft', true) }}
     </div>
-  </div>
+  </div> -->
 
   <h2 class="heading-large">Screenshots</h2>
 
