Tweak design of publish sidebar
Highlight the unpublished changes aspect

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -43,6 +43,18 @@ table thead th {
   background-color: $grey-4;
   padding: 20px;
   border-top: 5px solid $govuk-blue;
+
+  .unpublished-changes {
+    background: $govuk-blue;
+    color: $white;
+    margin: -20px -20px 30px;
+    padding: 10px 20px 20px;
+
+    p {
+      margin-bottom: 0;
+      @include bold-19;
+    }
+  }
 }
 
 // Related items
@@ -196,9 +208,18 @@ dl.aligned dt {
     clear: both;
 }
 
+dl.aligned.course-part-tasks dt {
+  width: 40%;
+}
+
+
 dl.aligned dd {
     width: 70%;
     float: right;
+}
+
+dl.aligned.course-part-tasks dd {
+  width: 60%;
 }
 
 .tabs {
