--- a/app/views/history/publish-changes/index.html
+++ b/app/views/history/publish-changes/index.html
@@ -14,6 +14,14 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <div class="notice add-double-bottom-margin">
+        <i class="icon icon-important">
+          <span class="visually-hidden">Warning</span>
+        </i>
+        <strong class="bold-small">
+          There is a <a href="/history/publish-changes/iteration-aug-15">newer version of this design</a>
+        </strong>
+      </div>
 
       <p>Designs for the different states content can be in, for both courses and organisation information.</p>
 
