--- a/app/views/about-your-organisation.html
+++ b/app/views/about-your-organisation.html
@@ -11,7 +11,7 @@
     {% if showMessage %}
       <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1">
         <h3 class="heading-medium success-summary-heading" id="success-summary-heading-example-1">
-          Changes saved
+          Your changes have been saved
         </h3>
       </div>
     {% endif %}
