--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -33,21 +33,23 @@
 
 {% macro aboutYourOrgPublish(state = 'new', publishedBefore = false) %}
 <div class="add-double-bottom-margin status-box">
+  {% if state == 'draft' %}
+    <div class="unpublished-changes">
+      <p>You have unpublished changes.</p>
+    </div>
+  {% endif %}
+
   {% if publishedBefore or state == 'published' %}
     <p>Last published on {{ today() }}</p>
+    <hr />
+  {% endif %}
+
+  {% if state == 'new' %}
+    <p>You need to complete and publish this information.</p>
+    <hr />
   {% endif %}
 
   {% if state == 'new' or state == 'draft' %}
-
-    {% if state == 'new' %}
-      <p>You need to complete and publish this information.</p>
-    {% endif %}
-
-    {% if state == 'draft' %}
-      <p>You have unpublished changes.</p>
-    {% endif %}
-    <hr />
-
     {# <h3 class="heading-medium remove-top-margin">Preview</h3>
     <p>Preview your information to check for mistakes before publishing.</p>
     <a href="/preview/about-your-organisation">Preview</a>
@@ -59,9 +61,9 @@
     <p>
       <a href="#" class="button">Publish</a>
     </p>
+    <hr />
   {% endif %}
 
-  <hr />
   <h3 class="heading-medium remove-top-margin">Formatting</h3>
   <p>You can use paragraphs, lists and links in your content.</p>
   <a href="#">Formatting help</a>
@@ -70,12 +72,14 @@
 
 {% macro coursePublish(state = 'new', publishedBefore = false, previewLink = '#', publishLink = '#') %}
 <div class="add-double-bottom-margin status-box">
-  {% if publishedBefore or state == 'published' %}
-    <p>Last published on {{ today() }}</p>
+  {% if state == 'draft' %}
+    <div class="unpublished-changes">
+      <p>You have unpublished changes.</p>
+    </div>
   {% endif %}
 
-  {% if state == 'draft' %}
-    <p>You have unpublished changes.</p>
+  {% if publishedBefore or state == 'published' %}
+    <p>Last published on {{ today() }}</p>
     <hr />
   {% endif %}
 
@@ -89,9 +93,9 @@
     <h3 class="heading-medium remove-top-margin">Publish</h3>
     <p>Publish your changes for applicants to see them.</p>
     <a href="{{ publishLink }}" class="button">Publish</a>
+    <hr />
   {% endif %}
 
-  <hr />
   <h3 class="heading-medium remove-top-margin">View on website</h3>
   <p>See how this course currently looks to applicants:</p>
   <a href="#">View on website</a>
