--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -2,3 +2,7 @@
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /><!--<![endif]-->
+
+<script>
+  var data = {{ data | dump | safe }};
+</script>
