--- a/app/views/course/fees-and-length.html
+++ b/app/views/course/fees-and-length.html
@@ -14,9 +14,9 @@
 
   {% include "course/_errors.html" %}
 
-  <form action="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" method="post">
-    <div class="grid-row">
-      <div class="column-two-thirds">
+  <div class="grid-row">
+    <div class="column-two-thirds">
+      <form action="/course/{{ accrediting.slug }}/{{ course.programmeCode }}" method="post">
         <h2 class="heading-large remove-top-margin">Course length</h2>
         {% set fields = [
             {
@@ -62,63 +62,24 @@
 
           {{ macros.textarea(course.programmeCode + '-fee-details', 'Fee details (optional)', 10, null, 250) }}
         {% endif %}
-      </div>
-      <div class="column-one-third">
-        <div class="status-box">
-          <form>
-            <h3 class="heading-medium remove-top-margin">Copy content from another course</h3>
 
-            <p>Filling in these fields from another course will overwrite existing text.</p>
-
-            <label class="form-label form-label-bold" for="copy-from">Copy from</label>
-            <select id="copy-from" name="copy-from" class="form-control add-bottom-margin" style="width: 100%; background: #fff">
-              {{ courseOptions() | safe }}
-            </select>
-
-            <h4 class="heading-small">Copy which fields?</h4>
-            {% set fields = [
-                {
-                  name: 'Course length'
-                },
-                {
-                  name: 'Salary'
-                },
-                {
-                  name: 'Financial support you offer'
-                }
-              ]
-            %}
-
-            {{ macros.checkboxGroup(course.programmeCode + '-duration', fields, errors) }}
-
-            <input type="submit" class="button" value="Copy content" />
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="grid-row">
-      <div class="column-two-thirds">
-
-      </div>
-    </div>
-
-    <div class="grid-row">
-      <div class="column-two-thirds">
         <h2 class="heading-large">Financial support you offer</h2>
         <p>If applicable, say more about the financial support you offer for this course. For example, any bursaries available.</p>
         <p>You don’t need to add details of any DfE bursaries and subject scholarships here. These will be published automatically to your course page</p>
 
         {{ macros.textarea(course.programmeCode + '-financial-support', 'Financial support you offer (optional)', 10, null, 250) }}
-      </div>
-    </div>
 
-    <div class="add-top-margin add-double-bottom-margin">
-      <input type="submit" class="button" value="Save" />
-    </div>
+        <div class="add-top-margin add-double-bottom-margin">
+          <input type="submit" class="button" value="Save" />
+        </div>
 
-    <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">Cancel changes</a>
-  </form>
+        <a href="/course/{{ accrediting.slug }}/{{ course.programmeCode }}">Cancel changes</a>
+      </form>
+    </div>
+    <div class="column-one-third">
+      {{ macros.copyContent() }}
+    </div>
+  </div>
 </main>
 
 {% endblock %}
