--- a/app/views/course/requirements.html
+++ b/app/views/course/requirements.html
@@ -38,7 +38,7 @@
       </form>
     </div>
     <div class="column-one-third">
-      {{ macros.formatting() }}
+      {{ macros.copyContent() }}
     </div>
   </div>
 </main>
