Link to terms agreement design

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-medium">August 2018</h2>
 
       <h3 class="heading-small">
+        <a href="/history/terms-agreement">Terms agreement</a>
+      </h3>
+      <p>
+        A user must agree to terms before enriching.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/formatting">Formatting</a>
       </h3>
       <p>
